2013-05-06  Ivan Andrus  <darthandrus@gmail.com>

	* find-file.el (cc-other-file-alist): Add ".m" for ObjC.  (Bug#14339)

2013-05-06  Glenn Morris  <rgm@gnu.org>

	* w32-fns.el (w32-charset-info-alist): Declare.

	* eshell/em-cmpl.el: Simply require pcomplete; eg we use a bunch
	of its defcustom properties.
	(eshell-cmpl-initialize): No need to load pcomplete.

	* generic-x.el: No need to require comint when compiling.

	* net/eudc-export.el: Make it loadable without bbdb.
	(top-level): Use require rather than load-library.
	(eudc-create-bbdb-record, eudc-bbdbify-phone)
	(eudc-batch-export-records-to-bbdb)
	(eudc-insert-record-at-point-into-bbdb, eudc-try-bbdb-insert):
	Require bbdb.

2013-05-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/octave.el (octave-texinfo-font-lock-keywords): Remove.
	(octave-font-lock-texinfo-comment): Use texinfo-font-lock-keywords with
	some tweaks, instead.

2013-05-05  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-font-lock-keywords)
	(octave-font-lock-texinfo-comment): Adjust for the byte-compiler.
	(inferior-octave-send-list-and-digest): Improve error message.
	(octave-mode, inferior-octave-mode): Use setq-local.
	(octave-help): Set info-lookup-mode.

2013-05-05  Richard Stallman  <rms@gnu.org>

	* vc/compare-w.el (compare-windows-whitespace):
	Treat no-break space as whitespace.

	* mail/rmailsum.el (rmail-summary-rmail-update):
	Detect empty summary and don't change selected message.
	(rmail-summary-goto-msg): Likewise.

	* mail/rmailsum.el (rmail-new-summary, rmail-new-summary-1):
	Doc fixes, rename args.

2013-05-05  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el (c-version): Increment to 5.32.5.

2013-05-05  Juri Linkov  <juri@jurta.org>

	* info.el (Info-read-subfile): Use (point-min) instead of (point)
	to not add the length of the summary segment to the return value.
	(Bug#14125)

2013-05-05  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (inferior-octave-strip-ctrl-g)